--- a/src/components/autocomplete-wraper/autoCompleteWraper.css
+++ b/src/components/autocomplete-wraper/autoCompleteWraper.css
@@ -1,4 +1,5 @@
 .autocomplete-wraper {
+    /* display: flex; */
     max-width: 100%;
     padding: 10px;
     margin: 10px;
@@ -17,7 +18,7 @@
     color: rgba(0, 0, 0, 0.73);
     padding: 10px 5px;
     box-sizing: border-box;
-    outline: none;
+    /* outline: none; */
 }
 
 .autocomplete-wraper ul {
